test(entities): couverture JaCoCo/Sonar sur Car et RentalRecord (equals, hashCode, assertFalse)